2006-01-16  Rick Moseley  <rmoseley@redhat.com>
	
	* Makefile.gen.sh: added 48 dir for images.

2006-01-14  Diego Novillo  <dnovillo@redhat.com>

	* acinclude.m4: Use lib64 if appropriate.

2005-12-15  Adam Jocksch  <ajocksch@redhat.com>

	* Makefile.gen.sh (find_images): Added.

	* Makefile.gen.sh: Changed find commands to use -path with -name 
	instead of -wholename, since that predicate doesn't exist on RHEL4.

2005-12-14  Adam Jocksch  <ajocksch@redhat.com>

	* Makefile.gen.sh: Added more complex targets for images that
	preserve the tree structure of the images directory.
	
2005-12-13  Andrew Cagney  <cagney@redhat.com>

	* m4/ac_find_file.m4: Fix escaping, [${$3}], not $$1.

	* version.in: Change version schema to MAJOR MINOR PATCHLEVEL YYYY
	MM DD, roll patch level to 1 -> 0.0.1.2005.12.13.

	* Makefile.am (EXTRA_DIST): For files in common, include
	$(srcdir).  Ensures that wild cards match the correct files.

2005-12-12  Andrew Cagney  <cagney@redhat.com>

	* Makefile.gen.sh (.java): Skip .java files when there is a
	corresponding .g or .sed file.

2005-12-10  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (MKJAVA): Use $(JV_SCAN).
	* acinclude.m4 (JV_SCAN): Check for jv-scan.

	* m4/frysk_pkg_module_variable.m4: Delete hack to work around
	broken pkg-config information.

2005-12-09  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (EXTRA_DIST): Add common/ChangeLog, common/*.m4,
	common/*.sh, and common/m4/*.m4.

	* acinclude.m4: Delete checks for gtk+-2.0, gtk2-java, glade-java,
	glib-java, and vte-java.

	* m4/frysk_pkg_module_variable.m4: New file.

2005-12-08  Andrew Cagney  <cagney@redhat.com>

	* acinclude.m4: Add checks for gtk2-java, glade-java, glib-java,
	vte-java, and gtk+-2.0.  Moved from frysk-gui, and frysk-imports
	configure.ac.

	* m4/frysk_find_jar.m4: New file.

	* m4/ac_find_file.m4: Only do search if variable not already set.

	* Makefile.rules (.a.so): Fix --soname parameter, strip out any
	directory prefix.
	